Why is this not working

--- a/Basemod/build.gradle
+++ b/Basemod/build.gradle
@@ -102,6 +102,9 @@ jar {
 jar.finalizedBy('reobfJar') 
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
+sourceSets { main { output.resourcesDir = output.classesDir } }
+
+
 
 publishing {
     publications {
