--- a/Basemod/build.gradle
+++ b/Basemod/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    compile 'javax.vecmath:vecmath:1.5.2'
 
 }
 
