--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -14,3 +14,8 @@ org.gradle.jvmargs=-Xmx3G
 
 # Dependencies
 	fabric_version=0.58.0+1.18.2
+
+# --------------------------------------------------------------------------------------------------------------------
+# Mod specific settings
+# DevAuth version
+devauth_version=1.1.0
