Changed mappings. The chat received mixin does not work yet

--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 		minecraft_version=1.19.3
+		parchment_version=2022.12.18
 		yarn_mappings=1.19.3+build.3
 		loader_version=0.14.11
 
