--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -20,6 +20,8 @@ repositories {
     maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
     maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url "https://maven.parchmentmc.org/" }
+
     maven {
         name = "CottonMC"
         url = "https://server.bbkr.space/artifactory/libs-release"
@@ -29,7 +31,13 @@ repositories {
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings loom.layered() {
+        officialMojangMappings()
+        parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
+    }
+
+
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modRuntimeOnly "me.djtheredstoner:DevAuth-fabric:${project.devauth_version}"
@@ -116,9 +124,7 @@ loom {
     runs {
         client {
             property("devauth.configDir", getRootProject().file(".devauth").absolutePath)
-
-
-        }
+                    }
     }
 }
 
