--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -84,6 +84,7 @@ java {
 
 tasks.register('replaceSounds', Copy) {
     from layout.buildDirectory.file("$projectDir/../shared/Sounds.java")
+    from layout.buildDirectory.file("$projectDir/../shared/Vector3.java")
     into layout.buildDirectory.dir("$projectDir/src/main/java/com/wynnvp/wynncraftvp/sound/")
 }
 
