--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
+    id 'fabric-loom' version '1.1-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -31,10 +31,10 @@ repositories {
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+
     mappings loom.layered() {
         officialMojangMappings()
-        parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
+        parchment("org.parchmentmc.data:parchment-${project.parchment_version}@zip")
     }
 
 
@@ -50,14 +50,14 @@ dependencies {
 
     // modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
-    modApi("me.shedaniel.cloth:cloth-config-fabric:9.0.94") {
+    modApi("me.shedaniel.cloth:cloth-config-fabric:10.0.96") {
         exclude(group: "net.fabricmc.fabric-api")
     }
-    modApi("com.terraformersmc:modmenu:3.2.3") {
+    modApi("com.terraformersmc:modmenu:6.1.0") {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    modImplementation include("io.github.cottonmc:LibGui:6.5.0+1.19.3")
+    modImplementation include("io.github.cottonmc:LibGui:7.0.0-rc.1+1.19.4")
 }
 
 
