--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-		minecraft_version=1.19.4
-		parchment_version=1.19.3:2023.03.12
-		yarn_mappings=1.19.4+build.2
-		loader_version=0.14.19
+		minecraft_version=1.20.2
+		parchment_version=1.20.2:2023.10.08
+#		yarn_mappings=1.19.4+build.2
+		loader_version=0.14.22
 
 # Mod Properties
 	mod_version = 1.5
@@ -14,7 +14,7 @@ org.gradle.jvmargs=-Xmx3G
 	archives_base_name = Voices-of-wynn-fabric
 
 # Dependencies
-	fabric_version=0.78.0+1.19.4
+	fabric_version=0.89.0+1.20.2
 
 
 # --------------------------------------------------------------------------------------------------------------------
