--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -68,6 +68,8 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
     // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
     it.options.release = 17
+    options.encoding = 'UTF-8'
+
 }
 
 java {
