--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+    modImplementation 'com.esotericsoftware.yamlbeans:yamlbeans:1.17'
 
     modApi("me.shedaniel.cloth:cloth-config-fabric:10.0.96") {
         exclude(group: "net.fabricmc.fabric-api")
