--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -1,22 +1,31 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 
-
 # Fabric Properties
 
-# check these on https://fabricmc.net/develop
+# Check these on https://fabricmc.net/develop
 minecraft_version=1.21
-parchment_version=1.20.6:2024.06.02
-loader_version=0.15.11
+fabric_loader_version=0.15.11
+
+# Check for latest at https://ldtteam.jfrog.io/ui/native/parchmentmc-internal/org/parchmentmc/data
+parchment_version=1.21:2024.07.07
 
 # Mod Properties
 mod_version=1.8.2
 maven_group=wynnvp
-archives_base_name=Voices-of-wynn-fabric
+mod_name=Voices of Wynn
 
 # Dependencies
-fabric_version=0.100.1+1.21
-# --------------------------------------------------------------------------------------------------------------------
-# Mod specific settings
+fabric_api_version=0.100.1
+
+# Cloth Config version
+# Check the latest version on https://maven.shedaniel.me/me/shedaniel/cloth/cloth-config-fabric/
+cloth_config_version=15.0.127
+
+# Mod Menu version
+# Check the latest version on https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu
+mod_menu_version=11.0.1
+
 # DevAuth version
-devauth_version=1.1.0
+# Check the latest version on https://github.com/DJtheRedstoner/DevAuth/releases
+devauth_version=1.2.1
