--- a/1.18/gradle.properties
+++ b/1.18/gradle.properties
@@ -29,3 +29,16 @@ mod_menu_version=11.0.1
 # DevAuth version
 # Check the latest version on https://github.com/DJtheRedstoner/DevAuth/releases
 devauth_version=1.2.1
+
+# Spotless
+# Check for latest at https://plugins.gradle.org/plugin/com.diffplug.spotless
+spotless_version=6.25.0
+
+# Check for latest at https://plugins.gradle.org/plugin/com.palantir.java-format-spotless
+spotless_palantir_version=2.47.0
+
+# Check for latest at https://github.com/google/gson/releases
+spotless_gson_version=2.11.0
+
+# Check for latest at https://groovy.jfrog.io/ui/native/plugins-release/org/codehaus/groovy/groovy-eclipse-integration/4.9.0
+spotless_greclipse_version=4.27
