--- a/1.18/build.gradle
+++ b/1.18/build.gradle
@@ -49,7 +49,7 @@ allprojects {
             }
             licenseHeader("/*\n" +
                     " * Copyright © Team-VoW \$YEAR.\n" +
-                    " * This file is released under CC0 1.0 Universal. See LICENSE for full license details.\n" +
+                    " * This file is released under AGPLv3. See LICENSE for full license details.\n" +
                     " */")
                     .updateYearWithLatest(true)
         }
