feat: Introduce sound_info.json and add everything needed to load it
This PR does not switch to using the new data files for sounds. It's purely technical background work. The old sound handler should be removed in a followup, along with all of it's components.

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ allprojects {
         }
         json {
             target "src/**/*.json"
+            targetExclude "src/**/sound_info.json"
             gson()
                     .indentWithSpaces(2)
                     .sortByKeys()
