feat: Allow VoW to be used with 1.21.1 (along with 1.21)
Development stays on 1.21, but since 1.21 and 1.21.1 is the very same version, except a small fix, the mod can be compatible with both versions (as Wynntils is).

--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ processResources {
         mod_version                : version,
         mod_id                     : maven_group,
         mod_name                   : mod_name,
-        minecraft_version          : minecraft_version,
+        minecraft_version_range    : minecraft_version_range,
         fabric_loader_version      : fabric_loader_version,
         fabric_api_version         : fabric_api_version,
         cloth_config_version       : cloth_config_version,
