--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,7 +146,8 @@ jobs:
           name: Voices of Wynn (${{ matrix.modloader }}) ${{ needs.changelog.outputs.tag }}
           version: ${{ needs.changelog.outputs.tag }}
           version-type: release
-          game-versions: 1.21
+          game-versions: |
+            >=1.21 <=1.21.1
           changelog: ${{ needs.changelog.outputs.changelog }}
 
           loaders: ${{ matrix.modloader }}
