--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx3G
 
 # Check these on https://fabricmc.net/develop
 minecraft_version=1.21
+minecraft_version_range=>=1.21 <=1.21.1
 fabric_loader_version=0.16.0
 
 # Check for latest at https://ldtteam.jfrog.io/ui/native/parchmentmc-internal/org/parchmentmc/data
