--- a/gradle.properties
+++ b/gradle.properties
@@ -4,26 +4,26 @@ org.gradle.jvmargs=-Xmx3G
 # Fabric Properties
 
 # Check these on https://fabricmc.net/develop
-minecraft_version=1.21
-minecraft_version_range=>=1.21 <=1.21.1
+minecraft_version=1.21.4
+minecraft_version_range=>=1.21.4
 fabric_loader_version=0.16.5
 # Check for latest at https://ldtteam.jfrog.io/ui/native/parchmentmc-internal/org/parchmentmc/data
-parchment_version=1.21:2024.07.28
+parchment_version=1.21.4:2025.01.05
 
 # Mod Properties
 maven_group=wynnvp
 mod_name=Voices of Wynn
 
 # Dependencies
-fabric_api_version=0.102.0
+fabric_api_version=0.114.3
 
 # Cloth Config version
 # Check the latest version on https://maven.shedaniel.me/me/shedaniel/cloth/cloth-config-fabric/
-cloth_config_version=15.0.128
+cloth_config_version=17.0.144
 
 # Mod Menu version
 # Check the latest version on https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu
-mod_menu_version=11.0.1
+mod_menu_version=13.0.0
 
 # DevAuth version
 # Check the latest version on https://github.com/DJtheRedstoner/DevAuth/releases
