--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -1,4 +1,4 @@
-name: Sync Sounds Folder to Azure Blob Storage
+name: Sync Sounds to Azure 
 on:
   push:
     paths:
@@ -12,4 +12,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Upload sounds folder to Azure Blob Storage
       run: |
-        azcopy copy './sounds/*' '${{ secrets.AZURE_STORAGE_URL }}' --recursive
+        azcopy copy './sounds/*' '${{ secrets.AZURE_STORAGE_URL }}/sounds' --recursive
