--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -12,4 +12,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Upload sounds folder to Azure Blob Storage
       run: |
-        azcopy copy './sounds/*' '${{ secrets.AZURE_STORAGE_URL }}/sounds' --recursive
+        azcopy copy './sounds/*' '${{ secrets.AZURE_STORAGE_URL }}' --recursive
