--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -12,4 +12,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Upload sounds folder to Azure Blob Storage
       run: |
-        azcopy copy './sounds/*' 'https://voicesofwynn.blob.core.windows.net/audio/sounds' --recursive --account-key ${{ secrets.AZURE_STORAGE_TOKEN }}
+        azcopy copy './sounds/*' 'https://voicesofwynn.blob.core.windows.net/audio' --recursive --account-key ${{ secrets.AZURE_STORAGE_TOKEN }}
