--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -12,6 +12,6 @@ jobs:
       uses: actions/checkout@v3
     - name: Upload sounds folder to Azure Blob Storage
       run: |
-        azcopy copy './sounds/*' '${{ secrets.AZURE_STORAGE_URL }}' --recursive
+        azcopy copy './sounds' '${{ secrets.AZURE_STORAGE_URL }}' --recursive
 
         
