--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,3 +151,34 @@ jobs:
 
           loaders: ${{ matrix.modloader }}
           java: 21
+
+  release-modrinth:
+    name: Release to Modrinth
+    if: ${{ needs.changelog.outputs.skipped != 'true' }}
+    strategy:
+      matrix:
+        modloader: [ fabric ]
+    runs-on: ubuntu-latest
+    needs: [ build, changelog ]
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+
+      - name: Publish to Modrinth
+        uses: modrinth/modrinth-publish@v2
+        with:
+          token: ${{ secrets.MODRINTH_API_TOKEN }}
+          project-id: Hn8Ot3qH
+          version-number: ${{ needs.changelog.outputs.tag }}
+          version-name: Voices of Wynn (${{ matrix.modloader }}) ${{ needs.changelog.outputs.tag }}
+          version-type: release
+          changelog: ${{ needs.changelog.outputs.changelog }}
+          loaders: |
+            ${{ matrix.modloader }}
+          dependencies: [ ]
+          files: |
+            **/build/libs/*-${{ matrix.modloader }}*.jar
+          game-versions: 1.21.4
+
