--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -22,5 +22,5 @@ jobs:
         if: env.CHANGED_FILES != ''
         run: |
           for file in $CHANGED_FILES; do
-            azcopy copy "$file" "${{ secrets.AZURE_STORAGE_URL }}/sounds/${file#sounds/}"
+            azcopy copy "$file" "${{ secrets.AZURE_STORAGE_URL }}/sounds/$file"
           done
