ci: Possible fixed sync azure pipeline

--- a/.github/workflows/sync-azure.yml
+++ b/.github/workflows/sync-azure.yml
@@ -17,10 +17,15 @@ jobs:
       - name: Identify changed and deleted files
         id: diff
         run: |
-          CHANGED_FILES=$(git diff --diff-filter=ACM --name-only HEAD~1 HEAD -- sounds/)
-          DELETED_FILES=$(git diff --diff-filter=D --name-only HEAD~1 HEAD -- sounds/)
-          echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
-          echo "DELETED_FILES=$DELETED_FILES" >> $GITHUB_ENV
+          CHANGED_FILES=$(git diff --diff-filter=ACM --name-only HEAD~1 HEAD -- sounds/ | tr '\n' ' ')
+          DELETED_FILES=$(git diff --diff-filter=D --name-only HEAD~1 HEAD -- sounds/ | tr '\n' ' ')
+          echo "CHANGED_FILES<<EOF" >> $GITHUB_ENV
+          echo "$CHANGED_FILES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          echo "DELETED_FILES<<EOF" >> $GITHUB_ENV
+          echo "$DELETED_FILES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
 
       - name: Upload changed files to Azure Blob Storage
         if: env.CHANGED_FILES != ''
