build: Copy over the latest sounds.json to be bundled with the mod

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,11 @@ dependencies {
 }
 
 processResources {
+    from('sounds') {
+        include 'sounds.json'
+        into '.'
+    }
+
     var replaceProperties = [
         mod_version            : version,
         mod_id                 : maven_group,
